# nutripae-recursos-humanos

./: .env.example  .gitignore  Dockerfile  README.md  REAME.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: b94d2caa7d25_initial_tables.py
client_sdk/: package-lock.json  package.json
compose/dev/: docker-compose.yml
compose/test/: docker-compose.yml
src/: main.py
src/core/: config.py  dependencies.py
src/db/: seeder.py  session.py  sync_seeder.py
src/models/: __init__.py  base.py  dailyAvailability.py  employee.py  parametric.py
src/repositories/: __init__.py  base.py  dailyAvailability.py  employee.py  parametric.py
src/routes/: dailyAvalabilities.py  employees.py  parametrics.py
src/schemas/: __init__.py  dailyAvailability.py  employee.py  parametric.py
src/services/: __init__.py  dailyAvailability.py  employee.py  parametric.py
src/utils/: exceptions.py
tests/: conftest.py  test_daily_availabilities.py  test_employees.py  test_main.py  test_parametrics.py
